--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <i class="bottom-icn fab fa-instagram px-2"></i>
     <i class="bottom-icn fab fa-linkedin px-2"></i>
 
-<center><p class="para">© Copyright 2018 TinDog</p></center>
+<center><p class="para">© Narenkumar 2020 TinDog</p></center>
   </footer>
 
 
